2012-09-18  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c:  Incorrect default layout of rotated xtic labels.
	Bug #3568817

	* lisp/configure.in lisp/Makefile.am:  The autoconfigure scripting for
	the lisp directory is failing when $(EMACS) is redefined by the user.
	But the failure is only relevant to testing/patching info-look.el for
	very old versions of emacs.  Deal with it by simply assuming that
	everyone has an emacs version newer than 20.3 and therefore no patching
	is needed.

	* lisp/info-look.20.2.el lisp/info-look.20.3.el: No longer needed.

2012-09-16  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c: set datafile separator {whitespace|tab|comma|"<char>"}

	* src/pm3d.c src/set.c src/color.c term/vgagl.trm src/term_api.h:
	The EXTENDED_COLOR_SPECS compile option is relevant only to one
	terminal (vgagl).  Make the corresponding toggle a terminal-specific
	flag rather than a global variable.  Clean up terminal flags.

	* src/axis.c src/axis.h src/mouse.c src/plot2d.c src/util.c:
	Allow zooming of plots that originally had an explicit range in the
	plot command.

	* src/set.c (set_label):  Simplify label parsing.

	* src/graphics.c (plot_filledcurves):  Use cliptorange() instead of
	simpler range check, since it handles reversed axes correctly.

2012-09-13  Ethan A Merritt  <merritt@u.washington.edu>

	* term/PostScript/prologue.ps term/post.trm:
	Handle transparent fill patterns in PS_fillbox() in the same way
	as is already done in PS_filled_polygon().
	Bug #3567035

	* src/eval.c (fill_gpval_axis) src/axis.h: The RANGE_REVERSE flag no
	longer exists, so do not report it to the user and do not swap axis
	min/max values when storing them for later mousing calculations by the
	canvas, svg, and other terminals.

	* src/datafile.c: Remove unused variables.

	* demo/html:  Update online demo collection to include linked axes
	and RGBA color applied to individual lines. 

2012-09-12  Shigeharu Takeno  <shige@iee.niit.ac.jp>
